unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/ia_crm__Revenue_Recognition_Template__c.object-meta.xml
<CustomObject>
    <label>Revenue Recognition Template</label>
    <nameField>
        <label>Revenue Recognition Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Revenue Recognition Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>