unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__No_of_periods__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__No_of_periods__c</fullName>
    <label>No of periods</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>