unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__Posting_day__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Posting_day__c</fullName>
    <label>(Depricated)Posting day</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>