unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__Posting_day_text__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Posting_day_text__c</fullName>
    <label>Posting day</label>
    <length>30</length>
    <type>Text</type>
</CustomField>