unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__Posting_method__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Posting_method__c</fullName>
    <label>Posting method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>