unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__Recognition_method__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Recognition_method__c</fullName>
    <label>Recognition method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Straight line</fullName>
            </value>
            <value>
                <fullName>Straight-line, prorate exact days</fullName>
            </value>
            <value>
                <fullName>Straight-line, percent allocation</fullName>
            </value>
            <value>
                <fullName>Exact days per period, prorate days</fullName>
            </value>
            <value>
                <fullName>Percent completed</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>