unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__Recognition_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Recognition_Start_Date__c</fullName>
    <label>Recognition Start Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transaction date</fullName>
            </value>
            <value>
                <fullName>User specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>