unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__Recognition_term__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Recognition_term__c</fullName>
    <label>Recognition term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed period</fullName>
            </value>
            <value>
                <fullName>Contract term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>