unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/fields/ia_crm__Template_Id__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Template_Id__c</fullName>
    <externalId>true</externalId>
    <label>Template ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>