unpackaged/main/default/objects/ia_crm__Revenue_Recognition_Template__c/listViews/ia_crm__All.listView-meta.xml
<ListView>
    <fullName>ia_crm__All</fullName>
    <columns>NAME</columns>
    <columns>ia_crm__Recognition_schedule_period__c</columns>
    <columns>ia_crm__Recognition_method__c</columns>
    <columns>ia_crm__Posting_method__c</columns>
    <columns>ia_crm__Recognition_Start_Date__c</columns>
    <columns>ia_crm__Recognition_term__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>